2015-05-18  Sherine Awad  <sherine.awad@gmail.com>

   * tests/test_scripts.py: Test loading of compressed counting table
   with bigcounts,and test abundance with bigcounts

2015-05-18  Michael R. Crusoe  <mcrusoe@msu.edu>

   * all files: references to github.com/ged-lab changed to
   github.com/dib-lab. All GitHub URLs normalized to use HTTPS
   * README.rst: broken landscape.io badge removed
   * doc/user/known-issues.rst: removed two known issues fixed in v1.4 release

2015-05-18  Titus Brown  <titus@idyll.org>

   * sandbox/{assembly-diff-2.py,sandbox/collect-reads.py},
   scripts/{count-median.py,filter-abund-single.py,filter-abund.py}: changed
   sequence-reading behavior to replace 'N' with 'A', to be consistent with
   rest of code base.
   * scripts/{filter-abund.py,filter-abund-single.py}: changed behavior of
   scripts to keep sequences with 'N's in them, and count them as 'A's.
   * tests/test_scripts.py: added tests for new
   filter-abund/filter-abund-single behavior.
   * tests/test-data/test-filter-abund-Ns.fq: new test file for new tests.

2015-05-13  Scott Sievert  <sieve121@umn.edu>

   * tests/*,scripts/*,lib/*,sandbox/*,khmer/*: changed "doc/LICENSE.txt" to
   "LICENSE" in copyright header.

2015-05-13  Michael R. Crusoe  <mcrusoe@msu.edu>

   * doc/dev/getting-started.rst: added missing dev tools to install list

2015-05-12  Kevin Murray  <spam@kdmurray.id.au>

   * scripts/load-into-counting.py,test/test_scripts.py: Add the number of
   reads processed to the machine readable output files of --summary-info.

2015-05-11  Titus Brown  <titus@idyll.org>

   * scripts/sample-reads-randomly.py: fixed boundary error in
   sample-reads-randomly.py.
   * tests/test_scripts.py: updated tests to correspond with correct
   behavior of sample-reads-randomly.py.

2015-04-23  Lex Nederbragt  <lex.nederbragt@ibv.uio.no>

   * tests/test_scripts.py: added a test for extract-partitions:
   whitespace in fasta header.
