@@ -17,6 +17,7 @@ doc/_build
 /.project
 /.pydevproject
 /.Rhistory
+.idea
 coverage.xml
 coverage-gcovr.xml
 coverage-debug
